Each link successfully loads separate app

--- a/client/modules/styles/global.styl
+++ b/client/modules/styles/global.styl
@@ -1,6 +1,13 @@
-body
-  background-color #eaeaea
-
 section
   background-color white
   padding 15px
+
+body
+  background-color #eaeaea
+
+  nav
+    @extends .navbar,.navbar-inverse,.navbar-fixed-top
+
+  main
+    margin-top 70px
+    @extends .container
