Build more intelligent grunt build process

--- a/server/app/layout.jade
+++ b/server/app/layout.jade
@@ -21,9 +21,9 @@ html(lang='en')
             li
               a(href='/multiple_named_views') Multiple Named View
             li
-              a(href='/multiple_named_views') Nested Views
+              a(href='/nested_views') Nested Views
             li
-              a(href='/multiple_named_views') View With Custom Directives
+              a(href='/view_with_custom_directives') View With Custom Directives
 
     main(ng-app=ngAppName)
       ui-view
