All views work correctly when loaded as separate apps

--- a/server/app/layout.jade
+++ b/server/app/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
     title Kale
     script(src='thirdparty_bundle.js')
     script(src=appName + '_bundle.js')
-    link(href='bundle.css', rel='stylesheet')
+    link(href=appName + '_bundle.css', rel='stylesheet')
 
   body
     nav
