Clean up build process

--- a/client/apps/single_view/template.jade
+++ b/client/apps/single_view/template.jade
@@ -1,4 +1,4 @@
-//- use template id from state name: (e.g parent.singleView -> #parent-single-view, )
+//- template id comes from state name: (e.g parent.singleView -> #parent-single-view, )
 #single-view
   section
     h1 {{ title }}
